refactor: style for iPhone SE

--- a/style.css
+++ b/style.css
@@ -74,27 +74,54 @@ html body .app .block .container h1 {
 html body .app .block .container .group {
   color: #FFFFFF;
   font-size: 12px;
-  padding-top: 0;
+  padding-top: 13px;
 }
 html body .app .block .container .paragraph {
+  position: relative;
   height: 23px;
   margin: 22px 0 0 0;
 }
-html body .app .block .container .paragraph::before {
+html body .app .block .container .paragraph::after {
+  z-index: 0;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  content: url("img/iPhone X/Path 1.svg");
+}
+html body .app .block .container ._firstLine::before {
+  z-index: 0;
+  position: absolute;
+  left: 0;
+  bottom: 30px;
   content: url("img/iPhone X/Path 1.svg");
 }
 @media screen and (min-width: 376px) {
   html body .app .block .container .paragraph {
-    height: 30px;
+    height: 33px;
+  }
+  html body .app .block .container .paragraph::after {
+    top: 25px;
+  }
+  html body .app .block .container ._firstLine::before {
+    bottom: 50px;
   }
   html body .app .block .container .group {
-    padding-top: 10px;
+    padding-top: 25px;
   }
 }
 @media screen and (max-width: 374px) {
+  html body .app .block .container .group {
+    padding-top: 13px;
+  }
   html body .app .block .container .paragraph {
-    height: 15px;
-    margin: 8px 0 0 0;
+    height: 20px;
+    margin: 5px 0 0 0;
+  }
+  html body .app .block .container .paragraph::after {
+    top: 10px;
+  }
+  html body .app .block .container ._firstLine::before {
+    bottom: 25px;
   }
 }
 html body .app .block .container .product {
@@ -377,6 +404,7 @@ html body .app ._bitmap .dot_2 {
 }
 html body .app ._bitmap .girl {
   position: absolute;
+  z-index: 1;
   left: 43%;
   top: 25%;
 }
