--- a/style.scss
+++ b/style.scss
@@ -36,8 +36,7 @@ html {
 
             i {
               display: block;
-              margin: auto;
-              text-align: center;
+              font-size: 18px;
             }
 
             &:hover {
